--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongodb": "^4.0.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
